// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test App component should render correctly 1`] = `
<div
  class="game"
>
  <h1>
    Select number of players
  </h1>
  <button
    class="button"
    data-testid="game-intro-button-2"
  >
    2
     players
  </button>
  <button
    class="button"
    data-testid="game-intro-button-3"
  >
    3
     players
  </button>
  <button
    class="button"
    data-testid="game-intro-button-4"
  >
    4
     players
  </button>
</div>
`;

exports[`Test App component should render correctly 2`] = `
<div
  class="game"
>
  <div />
  <div />
  <div />
</div>
`;

exports[`Test App component should render loading state 1`] = `
<div
  class="game"
>
  loading
</div>
`;
